Add static Analysis